добавил метод получения бесплатного ключа
